--- a/d2rhud-injector/d2rhud-injector.vcxproj
+++ b/d2rhud-injector/d2rhud-injector.vcxproj
@@ -16,6 +16,7 @@
     <ProjectGuid>{789a726e-ad0f-4239-b1a5-7cf85d0bd1a8}</ProjectGuid>
     <RootNamespace>d2rhudinjector</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>D2RHUD-Loader</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
